added draw condition and score counter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div class="container">
         <h1 id="playerText">Tic Tac Toe</h1>
         <button id="restartButton">restart</button>
+        <div id="scoreBoard">
+            <p>X Score: <span id="xScore">0</span></p>
+            <p>O Score: <span id="oScore">0</span></p>
+        </div>
 
         <div id="gameboard">
             <div class="box" id="0"></div>
