--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
     <div class="container">
         <h1 id="playerText">Tic Tac Toe</h1>
-        <button id="restartButton">CLEAR</button>
         <div id="scoreBoard">
             <p>X Score: <span id="xScore">0</span></p>
             <p>O Score: <span id="oScore">0</span></p>
@@ -32,6 +31,7 @@
             <div class="box" id="7"></div>
             <div class="box" id="8"></div>
         </div>
+        <button id="restartButton">New Game</button>
     </div>
     <script src="app.js"></script>
 </body>
