added back button and restyled buttons

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="https://odonnellrory.github.io" class="nav-button" id="backButton">Back to Portfolio</a>
+        <button id="restartButton" class="nav-button">New Game</button>
+    </nav>
     <div class="container">
         <h1 id="playerText">Tic Tac Toe</h1>
         <div id="scoreBoard">
-            <p>X Score: <span id="xScore">0</span></p>
-            <p>O Score: <span id="oScore">0</span></p>
+            <div class="score">X Score: <span id="xScore">0</span></div>
+            <div class="score">O Score: <span id="oScore">0</span></div>
         </div>
-
         <div id="gameboard">
             <div class="box" id="0"></div>
             <div class="box" id="1"></div>
@@ -31,7 +31,7 @@
             <div class="box" id="7"></div>
             <div class="box" id="8"></div>
         </div>
-        <button id="restartButton">New Game</button>
+
     </div>
     <script src="app.js"></script>
 </body>
